--- a/bin-debug/LD24_CanAPEalt.html
+++ b/bin-debug/LD24_CanAPEalt.html
@@ -49,7 +49,7 @@
             attributes.align = "middle";
             swfobject.embedSWF(
                 "LD24_CanAPEalt.swf", "flashContent", 
-                "100%", "100%", 
+                "640", "480", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
 			<!-- JavaScript enabled so display the flashContent div in case it is not replaced with a swf object. -->
@@ -74,14 +74,14 @@
         </div>
 	   	
        	<noscript>
-            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="LD24_CanAPEalt">
+            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="640" height="480" id="LD24_CanAPEalt">
                 <param name="movie" value="LD24_CanAPEalt.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#ffffff" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
                 <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="LD24_CanAPEalt.swf" width="100%" height="100%">
+                <object type="application/x-shockwave-flash" data="LD24_CanAPEalt.swf" width="640" height="480">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#ffffff" />
                     <param name="allowScriptAccess" value="sameDomain" />
