html template change

--- a/bin-debug/LD24_CanAPEalt.html
+++ b/bin-debug/LD24_CanAPEalt.html
@@ -61,6 +61,10 @@
 			 JavaScript and Flash plug-in support is available. The div is initially hidden so that it doesn't show
 			 when JavaScript is disabled.
 		-->
+		<h3>post-work, pre-sleep update</h3>
+		<p>Click on the game to give it input focus, then it's just LEFT (slow), RIGHT (fast) and Z (jump)</p>
+		<p>There's not much to see at the moment, and it won't be entirely clear what I'm doing (or why) however sketches and the next couple 
+			of hours worth of changes should illuminate</p>
         <div id="flashContent">
         	<p>
 	        	To view this page ensure that Adobe Flash Player version 
