better swinging, sky, bunch of other stuff. don't talk to me

--- a/bin-debug/LD24_CanAPEalt.html
+++ b/bin-debug/LD24_CanAPEalt.html
@@ -49,7 +49,7 @@
             attributes.align = "middle";
             swfobject.embedSWF(
                 "LD24_CanAPEalt.swf", "flashContent", 
-                "640", "480", 
+                "960", "480", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
 			<!-- JavaScript enabled so display the flashContent div in case it is not replaced with a swf object. -->
@@ -61,10 +61,8 @@
 			 JavaScript and Flash plug-in support is available. The div is initially hidden so that it doesn't show
 			 when JavaScript is disabled.
 		-->
-		<h3>post-work, pre-sleep update</h3>
-		<p>Click on the game to give it input focus, then it's just LEFT (slow), RIGHT (fast) and Z (jump)</p>
-		<p>There's not much to see at the moment, and it won't be entirely clear what I'm doing (or why) however sketches and the next couple 
-			of hours worth of changes should illuminate</p>
+		<h3>Thirteen Hours Left Update</h3>
+		<p>(Click on the game to give it input focus)</p>
         <div id="flashContent">
         	<p>
 	        	To view this page ensure that Adobe Flash Player version 
@@ -76,16 +74,30 @@
 								+ pageHost + "www.adobe.com/images/shared/download_buttons/get_flash_player.gif' alt='Get Adobe Flash player' /></a>" ); 
 			</script> 
         </div>
+		<p>currently you can kind of free roam as I've turned off building culls and allow left movement undecided whether to keep it like that or not</p>
+		<div style="width:80%;text-align:left">
+		<p>Controls:
+			<ul>
+				<li>Left, Right</li>
+				<ul><li>Movement</li></ul>
+				<li>Z or Up</li>
+				<ul><li>Jump</li></ul>
+				<li>X</li>
+				<ul><li>Swing from trees</li></ul>
+			</ul>
+		<p>There's not much to see at the moment, and it won't be entirely clear what I'm doing (or why) however sketches and the next couple 
+			of hours worth of changes should illuminate</p>
+	   	</div>
 	   	
        	<noscript>
-            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="640" height="480" id="LD24_CanAPEalt">
+            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="960" height="480" id="LD24_CanAPEalt">
                 <param name="movie" value="LD24_CanAPEalt.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#ffffff" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
                 <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="LD24_CanAPEalt.swf" width="640" height="480">
+                <object type="application/x-shockwave-flash" data="LD24_CanAPEalt.swf" width="960" height="480">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#ffffff" />
                     <param name="allowScriptAccess" value="sameDomain" />
