--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -61,10 +61,8 @@
 			 JavaScript and Flash plug-in support is available. The div is initially hidden so that it doesn't show
 			 when JavaScript is disabled.
 		-->
-		<h3>post-work, pre-sleep update</h3>
-		<p>Click on the game to give it input focus, then it's just LEFT (slow), RIGHT (fast) and Z (jump)</p>
-		<p>There's not much to see at the moment, and it won't be entirely clear what I'm doing (or why) however sketches and the next couple 
-			of hours worth of changes should illuminate</p>
+		<h3>Thirteen Hours Left Update</h3>
+		<p>(Click on the game to give it input focus)</p>
         <div id="flashContent">
         	<p>
 	        	To view this page ensure that Adobe Flash Player version 
@@ -76,6 +74,20 @@
 								+ pageHost + "www.adobe.com/images/shared/download_buttons/get_flash_player.gif' alt='Get Adobe Flash player' /></a>" ); 
 			</script> 
         </div>
+		<p>currently you can kind of free roam as I've turned off building culls and allow left movement undecided whether to keep it like that or not</p>
+		<div style="width:80%;text-align:left">
+		<p>Controls:
+			<ul>
+				<li>Left, Right</li>
+				<ul><li>Movement</li></ul>
+				<li>Z or Up</li>
+				<ul><li>Jump</li></ul>
+				<li>X</li>
+				<ul><li>Swing from trees</li></ul>
+			</ul>
+		<p>There's not much to see at the moment, and it won't be entirely clear what I'm doing (or why) however sketches and the next couple 
+			of hours worth of changes should illuminate</p>
+	   	</div>
 	   	
        	<noscript>
             <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="${width}" height="${height}" id="${application}">
